# VSMatch

./: .gitignore  CMakeLists.txt  README.md
configuration/: config.h  types.h
graph/: graph.cpp  graph.h
matching/: BuildTable.cpp  CMakeLists.txt  EvaluateQuery.cpp  EvaluateQuery.h  FilterVertices.cpp  FilterVertices.h  GenerateFilteringPlan.cpp  GenerateFilteringPlan.h  GenerateQueryPlan.cpp  main.cpp  matchingcommand.cpp  matchingcommand.h
utility/: QFilter.h  graphoperations.cpp
valid/: graph_covert.py  test.py
valid/data_graph/: HPRD.gfu
valid/query_graph/: query_dense_16_1.gfu  query_dense_16_10.gfu  query_dense_16_100.gfu  query_dense_16_101.gfu  query_dense_16_102.gfu  query_dense_16_103.gfu  query_dense_16_104.gfu  query_dense_16_105.gfu  query_dense_16_106.gfu  query_dense_16_107.gfu  query_dense_16_108.gfu  query_dense_16_109.gfu  query_dense_16_11.gfu  query_dense_16_110.gfu  query_dense_16_111.gfu  query_dense_16_112.gfu  query_dense_16_113.gfu  query_dense_16_114.gfu  query_dense_16_115.gfu  query_dense_16_116.gfu  query_dense_16_117.gfu  query_dense_16_118.gfu  query_dense_16_119.gfu  query_dense_16_12.gfu  query_dense_16_120.gfu  query_dense_16_121.gfu  query_dense_16_122.gfu  query_dense_16_123.gfu  query_dense_16_124.gfu  query_dense_16_125.gfu  query_dense_16_126.gfu  query_dense_16_127.gfu  query_dense_16_128.gfu  query_dense_16_129.gfu  query_dense_16_13.gfu  query_dense_16_130.gfu  query_dense_16_131.gfu  query_dense_16_132.gfu  query_dense_16_133.gfu  query_dense_16_134.gfu  (+160 more)
